# HACKATHON-TEXT-BOOK

./: .gitignore  CLAUDE.md  GEMINI.md  docusaurus.config.ts  feature_desc.txt  sidebars.ts
.claude/: settings.local.json
.gemini/tmp/: feature_description.txt
.specify/memory/: constitution.md
backend/: .env  .env.example  .gitignore  README.md  check_content.py  debug_main.py  debug_retriever.py  ingest_content.py  phr_backend_refactor.md  requirements.txt  simple_test.py  test_agent.py  test_connection.py  test_embeddings.py  test_port.py  test_search.py
backend/.claude/: settings.local.json
backend/app/: api.py  config.py  errors.py  main.py  router.py  schemas.py
backend/tests/: test_query_api.py
backend/validation/: retrieval_checks.py
docs/: intro.md
docs/module1-ros2/: chapter1-core-concepts.md
docs/module2-digital-twin/: chapter1-gazebo-simulation.md  chapter2-unity-digital-twins.md  chapter3-sensor-simulation.md
docs/module3-ai-robot-brain/: chapter1-core-components.md  chapter2-ros2-architecture.md  chapter3-building-a-nervous-system.md
docs/module3-ros2-nervous-system/: chapter1-core-components.md  chapter2-ros2-architecture.md  chapter3-building-a-nervous-system.md
docs/module4-vla/: _category_.json  chapter3-cognitive-planning.md  chapter4-robot-perception.md
frontend/: .env  README.md  docusaurus.config.ts  package-lock.json  package.json
frontend/docs/: intro.md
src/003-ros2-nervous-system/: CMakeLists.txt  package.xml  setup.py
src/003-ros2-nervous-system/src/: publisher_node.py  subscriber_node.py
(+149 files in other folders)
