cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(ros2_nervous_system_003)

find_package(ament_cmake REQUIRED)
find_package(ament_python REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_python_install_package(${PROJECT_NAME})

ament_package()
